--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/rtfeldman/elm-webpack-loader",
   "dependencies": {
     "loader-utils": "^0.2.11",
-    "node-elm-compiler": "4.1.1"
+    "node-elm-compiler": "git://github.com/lyddonb/node-elm-compiler.git#fix-file-limit-issue"
   },
   "devDependencies": {
     "chai": "^3.4.1",
